--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "gitment": "0.0.3",
-    "hexo": "4.0.0",
+    "hexo": "^4.0.0",
     "hexo-asset-image": "git+https://github.com/7ym0n/hexo-asset-image.git",
     "hexo-deployer-git": "^2.0.0",
     "hexo-generator-archive": "^1.0.0",
@@ -23,7 +23,7 @@
     "hexo-inject": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^2.0.0",
-    "hexo-renderer-sass": "^0.4.0",
+    "hexo-renderer-sass": "0.4.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0"
   }
