--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ branches: # 指定要构建的分支
   only: # only 表示只构建以下分支
   - hexo
 
-before_install:
-- npm install -g hexo-cli
+# before_install:
+# - npm install -g hexo-cli
 
 # Start: Build Lifecycle
 install: # 在安装项目环境阶段需要运行的命令，一条一行，类似的还有 before_install
