--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ branches: # 指定要构建的分支
 
 before_install:
 - npm install -g -no-bin-links hexo-cli --force
+- npm install -g
+  
 
 # Start: Build Lifecycle
 install: # 在安装项目环境阶段需要运行的命令，一条一行，类似的还有 before_install
